--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,165 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, button, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
 body {
-  font-family: 'Roboto Mono';
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 input:focus {
   outline: none;
 }
 
+* {
+  font-family: -apple-system, 'Noto Sans KR', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+body {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .hidden {
   display: none;
 }
 
-#clock {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  font-size: 90px;
+header #greeting {
+  margin-bottom: 40px;
 }
 
-img {
-  height: 100%;
-  position: absolute;
-
-  top: 0;
-  left: 0;
-  z-index: -1;
+header #greeting {
+  font-size: 50px;
 }
 
-.center {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+header .underline {
+  content: " ";
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 0%;
+  height: 1px;
+  margin-bottom: 40px;
+  -webkit-transition: width 0.5s;
+  transition: width 0.5s;
+  -webkit-transform: translateX(100%) scaleX(1);
+          transform: translateX(100%) scaleX(1);
 }
 
-#login-form input,
-#todo-form input {
-  background-color: transparent;
-  border: 0;
-  border-bottom: 1px solid black;
-  margin: 10px;
-  padding: 20px;
-  font-size: 20px;
+header:focus-within .underline {
+  width: 100%;
+  -webkit-transform: translateX(0%) scaleX(-1);
+          transform: translateX(0%) scaleX(-1);
 }
 
-#todo-form input {
-  margin: 10px;
-  padding: 10px;
-}
-#todo-form input,
-#login-form input::placeholder {
-  text-align: center;
+header #login-form input {
+  border: none;
+  width: 300px;
+  height: 50px;
 }
 
-#todo-list li {
-  padding: 10px;
-}
-#todo-list span {
-  padding: 10px;
-  margin: 10px;
+header #login-form input::-webkit-input-placeholder {
+  font-size: 30px;
+  font-weight: 300;
 }
 
-#quote {
-  display: inline-block;
-  width: 400px;
+header #login-form input:-ms-input-placeholder {
+  font-size: 30px;
+  font-weight: 300;
 }
-#weather {
-  display: inline-block;
-  width: 400px;
-  text-align: right;
+
+header #login-form input::-ms-input-placeholder {
+  font-size: 30px;
+  font-weight: 300;
 }
+
+header #login-form input::placeholder {
+  font-size: 30px;
+  font-weight: 300;
+}
+
+#main {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+  height: 50%;
+  width: 80%;
+}
+
+#main > * {
+  -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 15px;
+  margin: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#main #digital-clock {
+  font-size: 30px;
+  font-weight: 400;
+}
+/*# sourceMappingURL=style.css.map */
