--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,8 @@
 @import "./variables";
 *{
   font-family: -apple-system, 'Noto Sans KR', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: $gray;
+  color: white;
+  opacity: 0.95;
 }
 body {
   height: 100vh;
@@ -11,59 +12,113 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(315deg, #ffec61, #f321d7);
 }
 .hidden {
   display: none;
 }
-header{
+#greeting_name{
   #greeting{
     margin-bottom: 40px;
-  }
-  #greeting{
     font-size: 50px;
   }
-  .underline {
-    content: " ";
-    background-color: $gray;
+  
+  &:focus-within .input-underline{
+    width: 100%;
+  }
+  
+  #login-form {
+    position: relative;
+    .nameinput{  
+      border: none;
+      background-color: inherit;
+      width: 250px;
+      height: 50px;
+      font-size: 30px;
+      font-weight: 300;
+      text-align: center;
+      padding-left: 10px;
+    }
+    .nameinput::placeholder{
+      font-size: 30px;
+      font-weight: 300;
+      transition: 0.2s;
+      color: white;
+      opacity: 0.95;
+    }
+    .nameinput:focus::placeholder{
+      opacity: 0;
+    }
+  }
+  .input-underline{
+    background-color: white;
     width: 0%;
     height: 1px;
     margin-bottom: 40px;
-    transition: width 0.5s;
-    transform: translateX(100%) scaleX(1);
-  }
-  &:focus-within .underline{
-    width: 100%;
-  }
-
-  #login-form {
-    input{  
-      border: none;
-      // border-bottom: solid 1px $gray;
-      width: 300px;
-      height: 50px;
-      &::placeholder{
-        font-size: 30px;
-        font-weight: 300;
-      }
-    }
+    transition: all 0.5s;
   }
 }
+
 #main{
   display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(2,1fr);
+  grid-template-columns: repeat(3,200px);
+  grid-template-rows: repeat(2,200px);
+  justify-content: center;
   height: 50%;
   width: 80%;
-  & > *{
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  .main__item{
+    box-shadow: $boxshadow;
     border-radius: 15px;
     margin: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(255,255,255,0.1);
+    padding: 30px;
+    text-align: center;
   }
   #digital-clock{
     font-size: 30px;
-    font-weight: 400;
+    font-weight: 300;
+    flex-direction: column;
+    p:first-child{
+      margin-bottom: 15px;
+    }
+  }
+  #todo{
+    grid-row: 1 / -1;
+    grid-column: 2 / 3;
+    flex-direction: column;
+  }
+  #todo-form input{
+    background-color: inherit;
+    border: none;
+    border-bottom: 1px solid $gray;
+    transition: all 0.5s;
+  }
+  #todo-list{
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    width: 100%;
+    li{
+      padding: 8px 0;
+      margin: 8px 0;
+      border-radius: 15px;
+      cursor: pointer;
+      transition: 0.3s;
+      &:hover{
+        box-shadow: $boxshadow;
+      }
+      span{
+        margin-right: 5px;
+      }
+    }
+  }
+  #quote{
+    flex-direction: column;
+    span{
+      text-align: justify;
+    }
   }
 }
