--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import "./variables";
+@import "_extends";
 @import "greeting";
 
 *{
@@ -19,12 +20,21 @@ body {
 .hidden {
   display: none;
 }
+.input-underline{
+  background-color: white;
+  width: 0%;
+  height: 1px;
+  transition: all 0.5s;
+}
 
 
 #main{
   display: grid;
-  grid-template-columns: repeat(3,200px);
+  grid-template-columns: repeat(4,200px);
   grid-template-rows: repeat(2,200px);
+  grid-template-areas: 
+  "clock todo quote quote"
+  "weather todo . .";
   justify-content: center;
   height: 50%;
   width: 80%;
@@ -40,6 +50,7 @@ body {
     text-align: center;
   }
   #digital-clock{
+    grid-area: clock;
     font-size: 30px;
     font-weight: 300;
     flex-direction: column;
@@ -48,39 +59,75 @@ body {
     }
   }
   #todo{
+    grid-area: todo;
     grid-row: 1 / -1;
     grid-column: 2 / 3;
     flex-direction: column;
+    justify-content: flex-start;
+    padding: 30px 10px;
   }
   #todo-form input{
     background-color: inherit;
     border: none;
-    border-bottom: 1px solid $gray;
     transition: all 0.5s;
+    padding-bottom: 8px;
+    &::placeholder{
+      @extend %placeholder;
+      font-size: 16px;
+    }
+    &:focus::placeholder{
+      opacity: 0;
+    }
+    
   }
+  .input-underline{
+    width: 0%;
+    color: white;
+  }
+  &:focus-within .input-underline{
+    width: 100%;
+  }
+
   #todo-list{
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
     width: 100%;
     li{
-      padding: 8px 0;
-      margin: 8px 0;
+      padding: 8px 0px;
+      margin: 8px 0px;
       border-radius: 15px;
       cursor: pointer;
       transition: 0.3s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       &:hover{
         box-shadow: $boxshadow;
       }
       span{
         margin-right: 5px;
       }
+      button{
+        cursor: pointer;
+        background-color: transparent;
+        transition: 0.2s;
+        font-size: 18px;
+        display: flex;
+        padding-top: 1px;
+      }
+      button:hover{
+        color:red;
+      }
     }
   }
   #quote{
+    grid-area: quote;
     flex-direction: column;
     span{
       text-align: justify;
     }
+  }
+  #weather{
+    grid-area: weather;
   }
 }
