--- a/css/style.css
+++ b/css/style.css
@@ -359,5 +359,19 @@ body {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: weather;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 10px;
+}
+
+#main #weather .weather-location {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+#main #weather .weather-data {
+  font-size: 15px;
 }
 /*# sourceMappingURL=style.css.map */
