--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,17 @@ body {
       -ms-flex-align: center;
           align-items: center;
   background: linear-gradient(315deg, #ffec61, #f321d7);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 0px) and (max-width: 390px) {
+  body {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    padding-top: 55%;
+  }
 }
 
 .hidden {
@@ -193,7 +204,17 @@ body {
   transition: 1s;
 }
 
-@media screen and (min-width: 500px) and (max-width: 690px) {
+@media screen and (min-width: 0px) and (max-width: 390px) {
+  #main {
+    -ms-grid-columns: (200px)[1];
+        grid-template-columns: repeat(1, 200px);
+    -ms-grid-rows: (200px)[8];
+        grid-template-rows: repeat(8, 200px);
+        grid-template-areas: "clock" "weather" "todo" "todo" "quote" "quote" "." ".";
+  }
+}
+
+@media screen and (min-width: 391px) and (max-width: 850px) {
   #main {
     -ms-grid-columns: (200px)[2];
         grid-template-columns: repeat(2, 200px);
@@ -243,10 +264,6 @@ body {
   -ms-grid-row-span: 2;
   -ms-grid-column: 2;
   grid-area: todo;
-  grid-row: 1 / -1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2 / 3;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
